--- a/src/Listar/listar.css
+++ b/src/Listar/listar.css
@@ -1,8 +1,4 @@
-body{
-    background-image: url(../assets/back.png);
-  
-  }
- 
+
   ul {
     list-style-type: none;
     margin: 0;
@@ -43,4 +39,6 @@ body{
   
   .active {
     background-color: rgba(255,0,0,0.9);
+    color: white;
+    text-decoration: none;
   }
